mybril/src/snapshots/mybril__test__partition-8.snap
---
source: mybril/src/main.rs
expression: blocks
---
[
  [
    {
      "op": "const",
      "type": "int",
      "dest": "v",
      "value": 4
    },
    {
      "op": "print",
      "args": [
        "v"
      ]
    },
    {
      "op": "ret"
    }
  ]
]
