mybril/src/snapshots/mybril__test__partition.snap
---
source: mybril/src/main.rs
expression: blocks
---
[
  [
    {
      "op": "const",
      "type": "int",
      "dest": "out",
      "value": 1
    },
    {
      "op": "const",
      "type": "int",
      "dest": "one",
      "value": 1
    }
  ],
  [
    {
      "label": "loop"
    },
    {
      "op": "lt",
      "type": "bool",
      "dest": "end",
      "args": [
        "exp",
        "one"
      ]
    },
    {
      "labels": [
        "ret",
        "body"
      ],
      "op": "br",
      "args": [
        "end"
      ]
    }
  ],
  [
    {
      "label": "body"
    },
    {
      "op": "mul",
      "type": "int",
      "dest": "out",
      "args": [
        "out",
        "base"
      ]
    },
    {
      "op": "sub",
      "type": "int",
      "dest": "exp",
      "args": [
        "exp",
        "one"
      ]
    },
    {
      "labels": [
        "loop"
      ],
      "op": "jmp"
    }
  ],
  [
    {
      "label": "ret"
    },
    {
      "op": "ret",
      "args": [
        "out"
      ]
    }
  ]
]
